@@ -143,6 +143,9 @@ public final class XmlSecTool {
         if (cli.doClearBlacklist()) {
             cli.getBlacklist().clear();
         }
+        for (XmlSecToolCommandLineArguments.DigestChoice dig: cli.getBlacklistDigests()) {
+            cli.getBlacklist().addDigest(dig);
+        }
         if (cli.doListBlacklist()) {
             System.out.println("Digest algorithm blacklist:");
             if (cli.getBlacklist().getDigestBlacklist().isEmpty()) {
